# komorice

./: Cargo.toml  LICENSE.md  README.md  build.rs
assets/: icons.toml  komorice.rgba
src/: apperror.rs  config.rs  komo_interop.rs  komorebi_connect.rs  main.rs  monitors_viewer.rs  monitors_widget.rs  screen.rs  settings.rs  utils.rs  whkd.rs  widget.rs
src/komo_interop/: aspect_ratio.rs  komorebi_connect.rs  layout.rs
src/screen/: animation.rs  border.rs  general.rs  home.rs  live_debug.rs  monitor.rs  monitors.rs  rule.rs  rules.rs  sidebar.rs  stackbar.rs  theme.rs  transparency.rs  wallpaper.rs  whkd.rs  whkd_sidebar.rs  workspace.rs
src/screen/whkd/: app_bindings.rs  bindings.rs  helpers.rs
src/views/: config.rs
src/whkd/: unparser.rs
src/whkd_interop/: unparser.rs
src/widget/: color_picker.rs  expandable.rs  helpers.rs  hover.rs  icons.rs  icons_old.rs  modal.rs  monitors_viewer.rs  number_input.rs  opaque_maybe.rs  opt_button.rs  opt_helpers.rs  overlay.rs  text_input.rs
src/widget/number_input/: cursor.rs  value.rs
