[package]
name = "komorice"
version = "0.1.0"
edition = "2021"

[dependencies]
clipboard-win= "5"
dirs = "6"
iced = { version = "0.14.0-dev", features = ["advanced", "debug", "image", "smol"] }
komorebi-client = { git = "https://github.com/LGUG2Z/komorebi.git" }
komorebi-themes = { git = "https://github.com/LGUG2Z/komorebi.git" }
lazy_static = "1"
notify-debouncer-mini = "*"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { package = "serde_json_lenient", version = "0.2" }
smol = "2.0.2"

[patch.crates-io]
iced = { git = "https://github.com/iced-rs/iced.git", rev = "388a419ed5c229aadbca57bb09b474b1475b1ef9" }

[build-dependencies]
iced_fontello = { git = "https://github.com/alex-ds13/iced_fontello.git", branch = "feat/custom-icons" }
winres = "*"
