[package]
name = "komorice"
version = "0.1.0"
edition = "2024"

[dependencies]
async-compat = "0.2.4"
clipboard-win= "5"
dirs = "6"
iced = { version = "0.14.0-dev", features = ["advanced", "canvas", "debug", "image", "markdown", "smol"] }
iced_core = { version = "0.14.0-dev" }
komorebi-client = { git = "https://github.com/alex-ds13/komorebi.git", branch = "fix/public-placement", default-features = false }
komorebi-themes = { git = "https://github.com/alex-ds13/komorebi.git", branch = "fix/public-placement", default-features = false }
lazy_static = "1"
notify-debouncer-mini = "*"
num-traits = "0.2.19"
reqwest = { version = "0.12", features = ["json"] }
rfd = "0.15"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { package = "serde_json_lenient", version = "0.2" }
smol = "2.0.2"
unicode-segmentation = "1.11.0"
whkd-core = { git = "https://github.com/LGUG2Z/whkd.git", rev = "797209aabd6db7241b82a27716146d0b1da524bb" }
whkd-parser = { git = "https://github.com/LGUG2Z/whkd.git", rev = "797209aabd6db7241b82a27716146d0b1da524bb" }

[patch.crates-io]
iced = { git = "https://github.com/iced-rs/iced.git", branch = "bless-component" }
iced_core = { git = "https://github.com/iced-rs/iced.git", branch = "bless-component" }

[build-dependencies]
iced_fontello = { git = "https://github.com/alex-ds13/iced_fontello.git", branch = "feat/custom-icons" }
winres = "*"
